--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <link href="bower_components/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css" rel="stylesheet" type="text/css"/>
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
     <script type="text/javascript" src="bower_components/underscore/underscore-min.js"></script>
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
@@ -10,13 +11,49 @@
     <script type="text/javascript" src="src/app.js"></script>
 </head>
 <body>
-    <div ng-controller="MainCtrl as ctrl" class="app-container">
-        {{appName}}
-        <br/>
-        <button ng-click="getUserInfo()">Get User Info()</button>
-        <pre>
-            {{myOrganization | json}}
-        </pre>
+
+<div ng-controller="MainCtrl as ctrl" class="app-container">
+    <div class="slds-page-header">
+        <div class="slds-grid">
+            <div class="slds-col slds-has-flexi-truncate">
+                <div class="slds-media slds-no-space slds-grow">
+                    <div class="slds-media__figure">
+                        <svg class="slds-icon slds-icon-action-canvas" aria-hidden="true">
+                            <use xlink:href="bower_components/salesforce-lightning-design-system/assets/icons/standard-sprite/svg/symbols.svg#canvas"></use>
+                        </svg>
+                    </div>
+                    <div class="slds-media__body">
+                        <p class="slds-text-title--caps slds-line-height--reset">dieffrei.com</p>
+                        <h1 class="slds-page-header__title slds-m-right--small slds-align-middle slds-truncate" title="this should match the Record Title">My first chrome extension</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
+
+
+    <div class="app-section">
+
+        <div ng-if="!isOnSalesforceDomain" class="slds-grid slds-grid--vertical-align-center slds-grid--align-center">
+            <div class="slds-box slds-theme--shade slds-theme--alert-texture">
+                <p class="slds-text-align--center">Current tab is not on <b>salesforce.com</b> domain.</p>
+            </div>
+        </div>
+
+        <div ng-if="isOnSalesforceDomain" >
+            <button ng-click="getUserInfo()">Get User Info()</button>
+            <pre>
+                {{myOrganization | json}}
+            </pre>
+        </div>
+
+    </div>
+
+
+
+</div>
+
+
 </body>
 </html>
