badge first letter

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
     </div>
 
 
-    <div class="app-section">
+    <div class="app-section slds-is-relative">
+
+        <div ng-if="isLoading" class="slds-spinner_container">
+            <div role="status" class="slds-spinner slds-spinner--medium slds-spinner--brand">
+                <span class="slds-assistive-text">Loading</span>
+                <div class="slds-spinner__dot-a"></div>
+                <div class="slds-spinner__dot-b"></div>
+            </div>
+        </div>
 
         <div ng-if="!isOnSalesforceDomain" class="slds-grid slds-grid--vertical-align-center slds-grid--align-center">
             <div class="slds-box slds-theme--shade slds-theme--alert-texture">
@@ -42,7 +50,6 @@
         </div>
 
         <div ng-if="isOnSalesforceDomain" >
-            <button ng-click="getUserInfo()">Get User Info()</button>
             <pre>
                 {{myOrganization | json}}
             </pre>
